2003-12-10  Alon Gazit <along@mainsoft.com>
	* TableRow.cs: Change the implementation of the properties 
	HorizontalAlign and  VerticalAlign. The current implementation      
	has no influence on the rendered Html.

2003-12-10  Alon Gazit <along@mainsoft.com>
	* TableItemStyle.cs: Add setting of The WRAP flag in the Wrap
	property's set method.
	
2003-12-09  Jackson Harper <jackson@ximian.com>

	* PagedDataSource.cs (PrivateICollectionEnumerator.MoveNext):
	Increment counter when moving to start. Fixes bug #51926.
	
2003-12-08  Jackson Harper <jackson@ximian.com>

	* HyperLinkColumn.cs: Fix navigate url rendering. Patch by
	Benjamin Jemlich. Fixes bug #51823.
	
2003-12-07  Alon Gazit <along@mainsoft.com>
	* Panel.cs: Panel doesn't render nowrap attribute while the Wrap
	property is set to false. Fixes bug #58120.
	
2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableItemStyle.cs: merge TableItemStyle properties when Style is
	empty. Fixes bug #51689. Patch by Alon Gazit <along@mainsoft.com>.

2003-12-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButtonList.cs: render tabindex attribute if needed. Fixes bug
	#51648.

2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebControl.cs: don't create the attributes when GetAttribute is
	called.

2003-12-01  Jackson Harper <jackson@ximian.com>

	* WebControl.cs: Only allow access keys to be null or a single
	char. Patch by Alon Gazit <along@mainsoft.com>.
	
2003-11-30  Jackson Harper <jackson@ximian.com>

	* CheckBoxList.cs: A checkbox will have null post data if it is
	unselected. This fixes bug #51516.
	
2003-11-29  Jackson Harper <jackson@ximian.com>

	* DataGrid.cs: Display paging controls even when there is no
	data. Path by Mohammad DAMT. Fixes bug #51487.
	
2003-11-29  Jackson Harper <jackson@ximian.com>

	* DataGrid.cs: Call TrackViewState when loading bound columns view
	state. So that their state is saved. This fixes bug #51424. Also
	set ReadOnly.
	